--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "push---skate-&-downhill-india",
+  "name": "spots---skate-&-downhill",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@google/genai": "^1.37.0",
-    "lucide-react": "^0.562.0"
+    "lucide-react": "^0.562.0",
+    "zustand": "4.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
